tests/ui/nll/issue-57642-higher-ranked-subtype.stderr
error[E0599]: no function or associated item named `make_g` found for fn pointer `for<'a> fn(&'a ())` in the current scope
  --> $DIR/issue-57642-higher-ranked-subtype.rs:31:25
   |
LL |     let x = <fn (&())>::make_g();
   |                         ^^^^^^ function or associated item not found in `for<'a> fn(&'a ())`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `X` defines an item `make_g`, perhaps you need to implement it
  --> $DIR/issue-57642-higher-ranked-subtype.rs:4:1
   |
LL | trait X {
   | ^^^^^^^

error[E0599]: no function or associated item named `make_f` found for fn pointer `for<'a> fn(&'a ())` in the current scope
  --> $DIR/issue-57642-higher-ranked-subtype.rs:36:25
   |
LL |     let x = <fn (&())>::make_f();
   |                         ^^^^^^ function or associated item not found in `for<'a> fn(&'a ())`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Y` defines an item `make_f`, perhaps you need to implement it
  --> $DIR/issue-57642-higher-ranked-subtype.rs:17:1
   |
LL | trait Y {
   | ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
